fix search result view on mobile

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -711,6 +711,7 @@ ol.series li {
 /* not sure if using this ...*/
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #248ec2 !important;
+    overflow: visible;
 }
 
 #mysidebar .nav ul {
